@@ -9,6 +9,7 @@ Cobbler CHANGELOG
 - (BUGF) default value for server override should be <<inherit>> not <inherit>
 - (BUGF) ensure if virt bridge is set to "" it will apply the value from settings
 - (BUGF) cobbler check should say path to config file is /etc/cobbler, not /var/lib
+- (FEAT) enable cobblerweb username/pass logins when authing with spacewalk
 
 - XXX - 1.4.2
 - (BUGF) fix WTI power templates
